re-organize materials

--- a/Class_Contents/Classes/00_intro_00_content.ipynb
+++ b/Class_Contents/Classes/00_intro_00_content.ipynb
@@ -30,7 +30,7 @@
     }
    },
    "source": [
-    "This book is a *thorough* introduction to programming in [Python <img height=\"12\" style=\"display: inline-block\" src=\"static/link_to_py.png\">](https://www.python.org/).\n",
+    "This course is a *thorough* introduction to programming in [Python <img height=\"12\" style=\"display: inline-block\" src=\"static/link_to_py.png\">](https://www.python.org/).\n",
     "\n",
     "It teaches the concepts behind and the syntax of the core Python language as defined by the [Python Software Foundation <img height=\"12\" style=\"display: inline-block\" src=\"static/link_to_py.png\">](https://www.python.org/psf/) in the official [language reference <img height=\"12\" style=\"display: inline-block\" src=\"static/link_to_py.png\">](https://docs.python.org/3/reference/index.html). Furthermore, it introduces commonly used functionalities from the [standard library <img height=\"12\" style=\"display: inline-block\" src=\"static/link_to_py.png\">](https://docs.python.org/3/library/index.html) and popular third-party libraries like [numpy <img height=\"12\" style=\"display: inline-block\" src=\"static/link_to_py.png\">](https://www.numpy.org/), [pandas <img height=\"12\" style=\"display: inline-block\" src=\"static/link_to_py.png\">](https://pandas.pydata.org/), [matplotlib <img height=\"12\" style=\"display: inline-block\" src=\"static/link_to_py.png\">](https://matplotlib.org/), and others."
    ]
@@ -65,12 +65,12 @@
     }
    },
    "source": [
-    "This book is suitable for *total beginners*, and there are *no* formal prerequisites. The student only needs to have:\n",
+    "This course is suitable for *total beginners*, and there are *no* formal prerequisites. The student only needs to have:\n",
     "\n",
     "- a *solid* understanding of the **English language**,\n",
     "- knowledge of **basic mathematics** from high school,\n",
     "- the ability to **think conceptually** and **reason logically**, and\n",
-    "- the willingness to **invest around 90 - 120 hours on this course**."
+    "- the willingness to **invest around time and effort on this course**."
    ]
   },
   {
@@ -892,7 +892,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.10"
+   "version": "3.7.6"
   },
   "livereveal": {
    "auto_select": "code",
