--- a/Class_Contents/Excercises/00_intro_02_exercises.ipynb
+++ b/Class_Contents/Excercises/00_intro_02_exercises.ipynb
@@ -159,7 +159,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 3. Day 3: Coding Exercises with  (Arithmetic) Operators\n",
+    "## 3. Day 3 & 4: Coding Exercises with  (Arithmetic) Operators\n",
     "\n",
     "### Readings\n",
     "\n",
@@ -428,7 +428,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Exercises: Python as a Calculator\n",
+    "### Exercises: \n",
+    "\n",
+    "1. Python as a Calculator\n",
     "\n",
     "The [volume of a sphere <img height=\"12\" style=\"display: inline-block\" src=\"static/link_to_wiki.png\">](https://en.wikipedia.org/wiki/Sphere) is defined as $\\frac{4}{3} * \\pi * r^3$.\n",
     "\n",
@@ -452,6 +454,15 @@
    "outputs": [],
    "source": [
     "..."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "2. HackerRank Excercise. Link: https://www.hackerrank.com/challenges/python-arithmetic-operators/problem\n",
+    "\n",
+    "Please complete this exercise before Saturday."
    ]
   }
  ],
