--- a/Class_Contents/Classes/00_intro_00_content.ipynb
+++ b/Class_Contents/Classes/00_intro_00_content.ipynb
@@ -3,6 +3,9 @@
   {
    "cell_type": "markdown",
    "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    },
     "slideshow": {
      "slide_type": "skip"
     }
@@ -25,7 +28,8 @@
     "\n",
     "It teaches the concepts behind and the syntax of the core Python language as defined by the [Python Software Foundation <img height=\"12\" style=\"display: inline-block\" src=\"static/link_to_py.png\">](https://www.python.org/psf/) in the official [language reference <img height=\"12\" style=\"display: inline-block\" src=\"static/link_to_py.png\">](https://docs.python.org/3/reference/index.html). Furthermore, it introduces commonly used functionalities from the [standard library <img height=\"12\" style=\"display: inline-block\" src=\"static/link_to_py.png\">](https://docs.python.org/3/library/index.html) and popular third-party libraries like [numpy <img height=\"12\" style=\"display: inline-block\" src=\"static/link_to_py.png\">](https://www.numpy.org/), [pandas <img height=\"12\" style=\"display: inline-block\" src=\"static/link_to_py.png\">](https://pandas.pydata.org/), [matplotlib <img height=\"12\" style=\"display: inline-block\" src=\"static/link_to_py.png\">](https://matplotlib.org/), and others.\n",
     "\n",
-    "<img src=\"static/logo.png\" width=\"15%\" align=\"left\">\n",
+    "<img src=\"static/logo.png\" width=\"15%\" align=\"center\">\n",
+    "\n",
     "\n",
     "## Prerequisites\n",
     "\n",
@@ -226,21 +230,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Hello world\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(\"Hello world\")"
    ]
@@ -258,21 +254,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {
     "slideshow": {
      "slide_type": "skip"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Python 3.7.4\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "!python --version"
    ]
@@ -375,7 +363,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -417,12 +405,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "count = 0  # initialize variables to keep track of the\n",
     "total = 0  # running total and the count of even numbers\n",
+    "\n",
     "\n",
     "for number in numbers:\n",
     "    if number % 2 == 0:  # only work with even numbers\n",
@@ -441,20 +430,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "7.0"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "average"
    ]
@@ -472,20 +450,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'I am feeling great :-)'"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "\"Hello, World!\"\n",
     "\"I am feeling great :-)\""
@@ -493,7 +460,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -509,18 +476,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Hello, World!\n",
-      "I am feeling great :-)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(\"Hello, World!\")\n",
     "print(\"I am feeling great :-)\")"
@@ -535,18 +493,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Hello, World!\n",
-      "I am feeling great :-)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(\"Hello, World!\"); print(\"I am feeling great :-)\")"
    ]
@@ -658,11 +607,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "numbers = [7, 11, 8, 5, 3, 12, 2, 6, 9, 10, 1, 4]"
+    "numbers = [7, 11, 8, 5, 3, 12, 2, 6, 9, 10, 1, 4]\n"
    ]
   },
   {
@@ -702,10 +651,8 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
     "Python requires certain symbols at certain places (e.g., a `:` is missing here)."
    ]
@@ -717,7 +664,7 @@
    "outputs": [],
    "source": [
     "for number in numbers\n",
-    "    print(number)"
+    "print(number)"
    ]
   },
   {
@@ -780,20 +727,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "4.0"
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "import math\n",
     "math.sqrt(16)\n"
@@ -850,7 +786,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.7.9"
   },
   "livereveal": {
    "auto_select": "code",
