--- a/Class_Contents/Excercises/00_intro_02_exercises.ipynb
+++ b/Class_Contents/Excercises/00_intro_02_exercises.ipynb
@@ -46,21 +46,29 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Q1**: Check the latest [Bundesliga standings](https://www.bundesliga.com/en/bundesliga/table) and provide a table of the top three teams with the following four columns: rank, team name, games played, and points scored. Render the rank in **bold**, make the team name a clickable link (to the team's website), and put both the games played and points scored in *italics*. The header row should be visually different from the three rows with the teams' information."
+    "**Q1**: Check the latest [Bundesliga standings](https://www.bundesliga.com/en/bundesliga/table) and provide a table of the top three teams with the following four columns: rank, team name, games played, and points scored. Render the rank in **bold**, make the team name a clickable link (to the team's website), and put both the games played and points scored in *italics*. The header row should be visually different from the three rows with the teams' information.\n",
+    "\n",
+    "Expected result:\n",
+    "\n",
+    "<img src=\"static/ex1_0.png\" width=\"50%\" align=\"center\">"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    " < your answer >"
+    " < Write your answer >"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Q2**: The quote \"Education is what remains after one has forgotten what one has learned in school\" is attributed to Albert Einstein. Display the author and his quote appropriately!"
+    "**Q2**: The quote \"Education is what remains after one has forgotten what one has learned in school\" is attributed to Albert Einstein. Display the author and his quote appropriately!\n",
+    "\n",
+    "Expected result:\n",
+    "\n",
+    "<img src=\"static/ex2_0.png\" width=\"80%\" align=\"center\">"
    ]
   },
   {
@@ -482,7 +490,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.7.9"
   },
   "toc": {
    "base_numbering": 1,
