--- a/Class_Contents/Classes/00_intro_00_content.ipynb
+++ b/Class_Contents/Classes/00_intro_00_content.ipynb
@@ -238,7 +238,7 @@
    },
    "outputs": [],
    "source": [
-    "print(\"Hello world\")"
+    "print(\"Hello world\")\n"
    ]
   },
   {
@@ -411,7 +411,6 @@
    "source": [
     "count = 0  # initialize variables to keep track of the\n",
     "total = 0  # running total and the count of even numbers\n",
-    "\n",
     "\n",
     "for number in numbers:\n",
     "    if number % 2 == 0:  # only work with even numbers\n",
@@ -591,7 +590,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "seconds_per_year = 365 * 24 * 60 * 60"
+    "seconds_per_year = 365 * 24 * 60 * 60\n"
    ]
   },
   {
@@ -611,7 +610,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "numbers = [7, 11, 8, 5, 3, 12, 2, 6, 9, 10, 1, 4]\n"
+    "numbers = [7, 11, 8, 5, 3, 12, 2, 6, 9, 10, 1, 4]"
    ]
   },
   {
@@ -732,7 +731,7 @@
    "outputs": [],
    "source": [
     "import math\n",
-    "math.sqrt(16)\n"
+    "math.sqrt(15)\n"
    ]
   },
   {
@@ -786,7 +785,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.9"
+   "version": "3.8.3"
   },
   "livereveal": {
    "auto_select": "code",
