--- a/Class_Contents/Excercises/00_intro_02_exercises.ipynb
+++ b/Class_Contents/Excercises/00_intro_02_exercises.ipynb
@@ -161,6 +161,17 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "first = \"Anthony\"\n",
+    "second = \"Berta\"\n",
+    "third = \"Christian\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   },
   {
@@ -490,7 +501,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.9"
+   "version": "3.8.3"
   },
   "toc": {
    "base_numbering": 1,
