--- a/Class_Contents/Excercises/01_elements_02_exercises.ipynb
+++ b/Class_Contents/Excercises/01_elements_02_exercises.ipynb
@@ -202,6 +202,43 @@
     "for number in range(...):\n",
     "    print(...)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# HackerRank Exercises:\n",
+    "\n",
+    "1. What's Your Name?\n",
+    "https://www.hackerrank.com/challenges/whats-your-name/problem\n",
+    "\n",
+    "\n",
+    "2. Print Function\n",
+    "https://www.hackerrank.com/challenges/python-print/problem\n",
+    "\n",
+    "\n",
+    "3. Loops\n",
+    "https://www.hackerrank.com/challenges/python-loops/problem\n",
+    "\n",
+    "\n",
+    "4. Find a string\n",
+    "https://www.hackerrank.com/challenges/find-a-string/problem\n",
+    "\n",
+    "\n",
+    "5. String split and join\n",
+    "https://www.hackerrank.com/challenges/python-string-split-and-join/problem\n",
+    "\n",
+    "\n",
+    "6. Find a percentage\n",
+    "https://www.hackerrank.com/challenges/finding-the-percentage/problem"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
