--- a/Class_Contents/Excercises/00_intro_02_exercises.ipynb
+++ b/Class_Contents/Excercises/00_intro_02_exercises.ipynb
@@ -57,7 +57,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    " < Write your answer >"
+    "First Header | Second Header\n",
+    "------------ | -------------\n",
+    "Content from cell 1 | Content from cell 2\n",
+    "Content in the first column | Content in the second column"
    ]
   },
   {
@@ -458,7 +461,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -468,11 +471,62 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "23.887871999999998"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "..."
+    "r ** 3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "23.887871999999998"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pow(r,3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "23.887871999999998"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "r * r * r "
    ]
   },
   {
@@ -501,7 +555,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.7.9"
   },
   "toc": {
    "base_numbering": 1,
